[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

package_name = "Nft-mint_vault_swap"
author = ["Bughacker <bughackerjanaan@gmail.com>"]
